# TTmTDB

./: README.md  pyproject.toml  ttmtdb.py
tests/: test_ttmtdb.py
ttmtdb/: ttmtdb.py  ttmtdbdata.py
